--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "array-reducer",
+  "name": "@flejz/array-reducer",
   "version": "1.0.0",
   "description": "Reduces an array. Supports sync and promise/async reducer functions",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha tests"
+    "test": "nyc mocha tests"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,9 @@
   },
   "homepage": "https://github.com/flejz/array-reducer#readme",
   "devDependencies": {
-    "mocha": "^6.2.2"
-  }
+    "mocha": "^6.2.2",
+    "nyc": "^14.1.1",
+    "uglify-js": "^3.6.5"
+  },
+  "dependencies": {}
 }
