minor changes in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "array-reducer",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Reduces an array. Supports sync and promise/async reducer functions",
   "main": "src/index.js",
   "scripts": {
@@ -20,7 +20,7 @@
     "promise"
   ],
   "author": "@flejz",
-  "license": "SEE LICENSE IN LICENSE",
+  "license": "GNU",
   "bugs": {
     "url": "https://github.com/flejz/array-reducer/issues"
   },
